added style.css to lomake.html and made changes according to that

--- a/kotitehtavat/profiilisivu.html
+++ b/kotitehtavat/profiilisivu.html
@@ -25,6 +25,8 @@
         <p><strong>Syntymävuosi:</strong> 1980</p>
         <p><strong>Asuinpaikka:</strong> Espoo</p>
 
+        <br>
+
         <h2 id="harrastukset">Harrastukset</h2>
         <ul>
             <li>Videopelit</li>
@@ -32,6 +34,8 @@
             <li>Lentopallo</li>
             <li>Ulkoilu koiran kanssa</li>
         </ul>
+
+        <br>
 
         <h2 id="tilastotiedot">Tilastotietoa</h2>
         <table border="1">
@@ -53,13 +57,15 @@
             </tr>
         </table>
 
+        <br>
+
         <h2 id="kuvaus">Oma kuvaus</h2>
         <p>Olen puuhaillut tietokoneiden parissa ihan pienestä pitäen. Tällä hetkellä työskentelen pelifirmassa koodarina.</p>
         <p>Rakastan videopelejä. Suosikkigenreni ovat toimintapelit ja roolipelit. Tietokoneella istumisen vastapainona harrastan lentopalloa, ja koirakin raahaa mukanaan lenkille joka päivä.</p>
         <p>Suosikkipelini on World of Warcraft.</p>
         <img src="WoW_Logo.webp">
 
-        
+        <br>
 
         <form action="laheta.php" method="post" id="yhteys">
             <fieldset>
@@ -73,7 +79,7 @@
                 <label for="mies">Mies</label>
                 <input type="radio" id="nainen" name="sukupuoli" value="nainen">
                 <label for="nainen">Nainen</label>
-                <input type="radio" id="en_sano" name="sukupuoli" value="en_halu_sanoa">
+                <input type="radio" id="en_sano" name="sukupuoli" value="en_halua_sanoa">
                 <label for="en_sano">En halua sanoa</label><br><br>
                 
                 <label for="syy">Yhteydenoton syy:</label><br>
