--- a/kotitehtavat/lomake.html
+++ b/kotitehtavat/lomake.html
@@ -12,7 +12,7 @@
         <form method="post">
 
             <fieldset>
-                <legend>Yhteystiedot</legend>
+                <legend>Henkilötiedot</legend>
 
                 <label for="nimi">Nimi:</label><br>
                 <input type="text" id="nimi" name="nimi" required><br><br>
@@ -39,7 +39,7 @@
             <br><br>
 
             <fieldset>
-                <legend>Muut tiedot</legend>
+                <legend>Lisätiedot</legend>
                 <h2>Mistä osastoista olet kiinnostunut?</h2>
                 <input type="checkbox" id="muoti" name="osasto[]" value="Muoti">
                 <label for="muoti">Muoti</label><br>
