--- a/html-malli.html
+++ b/html-malli.html
@@ -8,12 +8,18 @@
     </head>
     <body>
         <nav>
-            <a href="">Linkki 1</a>
-            <a href="">Linkki 2</a>
-            <a href="">Linkki 3</a>
-            <a href="">Linkki 4</a>            
+            <div class="menu-icon" onclick="toggleMenu()">
+                &#9776;
+            </div>
+            <ul class="nav-links" id="navLinks">
+                <li><a href="#">Linkki 1</a></li>
+                <li><a href="#">Linkki 2</a></li>
+                <li><a href="#">Linkki 3</a></li>
+                <li><a href="#">Linkki 4</a></li>
+                <li><a href="#">Linkki 5</a></li>
+            </ul>
         </nav>
-        <div class="main">
+        <div class="container">
             <h1>HTML-malli</h1>
             <h2>Otsikko</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis lectus vitae dolor pharetra, vel suscipit leo fermentum. Pellentesque et efficitur ante. Mauris in congue odio.</p>
@@ -21,5 +27,11 @@
         <footer>
             <p>Copyright © Sofia</p>
         </footer>
+        <script>
+            function toggleMenu() {
+                const navLinks = document.getElementById('navLinks');
+                navLinks.classList.toggle('active');
+            }
+        </script>
     </body>
 </html>
