added files to folders and created a new image gallery project

--- a/html-malli.html
+++ b/html-malli.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <nav>
+            <div class="logo">
+                <a href="#"><img src="logo.png"></a>
+            </div>
             <div class="menu-icon" onclick="toggleMenu()">
                 &#9776;
             </div>
