--- a/kotitehtavat/attribuuttiprojekti/attribuutit.html
+++ b/kotitehtavat/attribuuttiprojekti/attribuutit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Lorem Ipsum</title>
 </head>
 <body>
@@ -43,7 +44,7 @@
     
     <br>
 
-    <img src="../kissat.JPG" alt="Kuva" width="300">
+    <img src="kissat.JPG" alt="Kuva" width="300">
 
     <p><a href="https://www.google.fi/">Google</a></p>
 </body>
