created a new project for positioning exercise and finished the image gallery

--- a/kotitehtavat/kuvagalleria/index.html
+++ b/kotitehtavat/kuvagalleria/index.html
@@ -25,39 +25,43 @@
         <div class="container">
             <h1>Kuvagalleria</h1>
             <h2>Kissoja</h2>
-            <div class="sailio">
-                <img src="img/1.jpg" alt="Kuvan teksti">
-                <div class="kuvaus">Punainen ruusu</div>
-            </div>
-            <div class="sailio">
-                <img src="img/2.jpg" alt="Kuvan teksti">
-                <div class="kuvaus">Punainen ruusu</div>
-            </div>
-            <div class="sailio">
-                <img src="img/3.jpg" alt="Kuvan teksti">
-                <div class="kuvaus">Punainen ruusu</div>
-            </div>
-            <div class="sailio">
-                <img src="img/4.jpg" alt="Kuvan teksti">
-                <div class="kuvaus">Punainen ruusu</div>
-            </div>
+            <div class="flexContainer">
+                <div class="sailio">
+                    <img src="img/1.jpg" alt="Musta kissa">
+                    <div class="kuvaus">Musta kissa</div>
+                </div>
+                <div class="sailio">
+                    <img src="img/2.jpg" alt="Mustavalkoinen kissa">
+                    <div class="kuvaus">Mustavalkoinen kissa</div>
+                </div>
+                <div class="sailio">
+                    <img src="img/3.jpg" alt="Pitkäkarvainen kissa">
+                    <div class="kuvaus">Pitkäkarvainen kissa</div>
+                </div>
+                <div class="sailio">
+                    <img src="img/4.jpg" alt="Siamilainen kissa">
+                    <div class="kuvaus">Siamilainen kissa</div>
+                </div>
+             </div>
 
             <h2>Lisää kissoja</h2>
-            <div class="sailio">
-                <img src="img/5.jpg" alt="Kuvan teksti">
-                <div class="kuvaus">Punainen ruusu</div>
-            </div>
-            <div class="sailio">
-                <img src="img/6.jpg" alt="Kuvan teksti">
-                <div class="kuvaus">Punainen ruusu</div>
-            </div>
-            <div class="sailio">
-                <img src="img/7.jpg" alt="Kuvan teksti">
-                <div class="kuvaus">Punainen ruusu</div>
-            </div>
-            <div class="sailio">
-                <img src="img/8.jpg" alt="Kuvan teksti">
-                <div class="kuvaus">Punainen ruusu</div>
+            <div class="flexContainer">
+                <div class="sailio">
+                    <img src="img/5.jpg" alt="Laikukas kissa">
+                    <div class="kuvaus">Laikukas kissa</div>
+                </div>
+                <div class="sailio">
+                    <img src="img/6.jpg" alt="Oranssi kissa">
+                    <div class="kuvaus">Oranssi kissa</div>
+                </div>
+                <div class="sailio">
+                    <img src="img/7.jpg" alt="Raidallinen kissa">
+                    <div class="kuvaus">Raidallinen kissa</div>
+                </div>
+                <div class="sailio">
+                    <img src="img/8.jpg" alt="Ruskea kissa">
+                    <div class="kuvaus">Ruskea kissa</div>
+                </div>
             </div>
         </div>
         <footer>
