Updated some styles and created a new project folder with files

--- a/kotitehtavat/kuvagalleria/index.html
+++ b/kotitehtavat/kuvagalleria/index.html
@@ -62,6 +62,22 @@
                     <img src="img/8.jpg" alt="Ruskea kissa">
                     <div class="kuvaus">Ruskea kissa</div>
                 </div>
+                <div class="sailio">
+                    <img src="img/9.jpg" alt="Ruskeavalkoinen kissa">
+                    <div class="kuvaus">Ruskeavalkoinen kissa</div>
+                </div>
+                <div class="sailio">
+                    <img src="img/10.jpg" alt="Harmaavalkoinen kissa">
+                    <div class="kuvaus">Harmaavalkoinen kissa</div>
+                </div>
+                <div class="sailio">
+                    <img src="img/11.jpg" alt="Valkoinen kissa">
+                    <div class="kuvaus">Valkoinen kissa</div>
+                </div>
+                <div class="sailio">
+                    <img src="img/12.jpg" alt="Naamiokissa">
+                    <div class="kuvaus">Naamiokissa</div>
+                </div>
             </div>
         </div>
         <footer>
