Updated pictures and some texts

--- a/kukkakauppa/hoito.html
+++ b/kukkakauppa/hoito.html
@@ -58,10 +58,10 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/howea.jpg" />
+            <img src="img/lannoite.jpg" />
           </div>
           <div class="product-block product-text">
-            <h3>Biolan Luonnonlannoite 250ml</h3>
+            <h3>Biolan Luonnonlannoite 500ml</h3>
             <p>
               <b>Hinta: 9,90 €</b><br />
               Biolan Luonnonlannoite on luonnonmukainen lannoite, joka sopii
@@ -81,7 +81,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/spathiphyllum.jpg" />
+            <img src="img/multa.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Kekkilä Kukkamulta 10L</h3>
@@ -103,7 +103,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/monstera.jpg" />
+            <img src="img/ravinne.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Substral Nestemäinen Kasviravinne 250ml</h3>
@@ -125,7 +125,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/aureum.jpg" />
+            <img src="img/torjunta.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Neem-öljy Tuholaistorjunta-aine 250ml</h3>
