--- a/kukkakauppa/tyokalut.html
+++ b/kukkakauppa/tyokalut.html
@@ -58,7 +58,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/howea.jpg" />
+            <img src="img/puutarhasakset.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Fiskars Classic -puutarhasakset</h3>
@@ -80,7 +80,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/spathiphyllum.jpg" />
+            <img src="img/kastelupistooli.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Gardena Comfort -kastelupistooli</h3>
@@ -101,7 +101,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/monstera.jpg" />
+            <img src="img/istutuslapio.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Fiskars Xact -istutuslapio</h3>
@@ -122,7 +122,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/aureum.jpg" />
+            <img src="img/talikko.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Wolf-Garten Multi-Star -talikko</h3>
