--- a/kukkakauppa/ulkokasvit.html
+++ b/kukkakauppa/ulkokasvit.html
@@ -58,7 +58,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/howea.jpg" />
+            <img src="img/paeonia.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Pionit (Paeonia)</h3>
@@ -81,7 +81,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/spathiphyllum.jpg" />
+            <img src="img/lavandula.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Laventeli (Lavandula angustifolia)</h3>
@@ -103,7 +103,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/monstera.jpg" />
+            <img src="img/acer.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Japaninvaahtera (Acer palmatum)</h3>
@@ -125,7 +125,7 @@
       <div class="product-wrapper">
         <div class="flex-wrapper">
           <div class="product-block">
-            <img src="img/aureum.jpg" />
+            <img src="img/cerastium.jpg" />
           </div>
           <div class="product-block product-text">
             <h3>Hopeahärkki (Cerastium tomentosum)</h3>
