--- a/kukkakauppa/uutiset.html
+++ b/kukkakauppa/uutiset.html
@@ -51,9 +51,17 @@
           <div class="product-block product-text">
             <p>
               <b>3.7.2024</b><br />
-              Puutarhakasvien karsiminen kannattaa aloittaa hyvissä ajoin!
-              Meiltä löydät kaikki tarvittavat työvälineet pitääksesi pihasi
-              siistinä.
+              Puutarhakasvien karsiminen on tärkeä osa pihanhoitoa, ja nyt on
+              täydellinen aika aloittaa! Säännöllinen karsiminen ei ainoastaan
+              pidä puutarhasi siistinä, vaan myös edistää kasvien terveyttä ja
+              vahvistaa niiden kasvua. Oikein tehtynä karsiminen auttaa kasveja
+              säilyttämään muotonsa ja estää liiallista kasvua, mikä vähentää
+              tuholaisten ja tautien riskiä. Puutarhaliike Neilikasta löydät
+              laajan valikoiman karsintatyökaluja, kuten oksasakset,
+              oksaleikkurit ja pensasleikkurit, jotka tekevät työstä vaivatonta
+              ja tehokasta. Tule käymään myymälässämme ja hanki laadukkaat
+              välineet, joilla pidät puutarhasi parhaassa mahdollisessa kunnossa
+              ympäri vuoden!
             </p>
           </div>
         </div>
@@ -67,8 +75,16 @@
           <div class="product-block product-text">
             <p>
               <b>1.6.2024</b><br />
-              Onnea tänään valmistuville! Muista juhlasankareita kauniilla
-              ruusuilla ja kukkakimpuilla vierailemalla liikkeissämme.
+              Onnea kaikille tänään valmistuville! Tähän erityiseen päivään
+              kuuluu onnittelut ja lämpimät muistot, ja mikä olisikaan parempi
+              tapa juhlistaa saavutusta kuin kauniilla kukilla. Puutarhaliike
+              Neilikasta löydät upean valikoiman ruusuja ja kukkakimppuja, jotka
+              on huolella valittu ja sidottu täydentämään juhlapäivän tunnelmaa.
+              Olipa kyseessä yksi ruusu, joka kertoo paljon, tai runsas
+              kukkakimppu, joka säihkyy väriloistossaan, meiltä löydät juuri
+              sopivat kukat valmistuneelle. Tule käymään myymälässämme tai tee
+              tilaus etukäteen, jotta voit yllättää juhlasankarin kukkien
+              kauneudella ja tuoksulla!
             </p>
           </div>
         </div>
@@ -82,9 +98,17 @@
           <div class="product-block product-text">
             <p>
               <b>15.2.2024</b><br />
-              Kevään lähestyessä on aika pistää kädet multaan ja hoitaa
-              sisäkasvien mullanvaihto. Autamme tarvittaessa valitsemaan oikean
-              mullan kasvillesi.
+              Kevään saapuminen on täydellinen aika uudistaa sisäkasvien
+              elinvoima mullanvaihdon avulla! Mullanvaihto antaa kasveillesi
+              uutta energiaa ja varmistaa, että ne saavat tarvitsemansa
+              ravinteet ja kasvualustan. Puutarhaliike Neilikasta löydät laajan
+              valikoiman eri kasveille sopivia multia, kuten kaktusmultaa,
+              orkideamultaa ja kukkamultaa. Asiantunteva henkilökuntamme auttaa
+              sinua valitsemaan juuri oikeanlaisen mullan, joka vastaa kasvisi
+              erityistarpeita. Mullanvaihto kannattaa tehdä vuosittain tai parin
+              vuoden välein, jotta kasvit pysyvät terveinä ja hyvinvoivina. Tule
+              käymään myymälässämme ja anna kasveillesi paras mahdollinen
+              startti kevääseen!
             </p>
           </div>
         </div>
@@ -98,8 +122,17 @@
           <div class="product-block product-text">
             <p>
               <b>2.1.2024</b><br />
-              Hyvää uutta vuotta! Uuden vuoden kunniaksi myymälöissämme upeita
-              tarjouksia.
+              Hyvää uutta vuotta! Uuden vuoden kunniaksi Puutarhaliike Neilikka
+              tarjoaa upeita alennuksia ja tarjouksia, jotka tekevät uuden
+              kasvukauden aloittamisesta entistäkin inspiroivampaa. Nyt on
+              täydellinen aika hankkia kaikki tarvitsemasi puutarha- ja
+              sisäkasvitarvikkeet edullisesti. Löydät myymälöistämme alennuksia
+              suosituista kasveista, lannoitteista, mullanvaihtotuotteista sekä
+              laadukkaista puutarhatyökaluista. Olipa tavoitteenasi luoda vehreä
+              parveke tai uudistaa kotisi viherkasvit, nyt voit tehdä sen
+              budjettiystävällisesti. Tule tutustumaan tarjouksiimme ja aloita
+              uusi vuosi vihreän inspiraation merkeissä! Tarjoukset ovat
+              voimassa rajoitetun ajan, joten toimi nopeasti!
             </p>
           </div>
         </div>
@@ -113,8 +146,17 @@
           <div class="product-block product-text">
             <p>
               <b>14.12.2023</b><br />
-              Joulukukat edullisesti meiltä. Myymälöissämme myös kattava ja
-              edullinen valikoima joulukuusia.
+              Joulu lähestyy, ja nyt on aika luoda kotiin juhlan tunnelmaa
+              kauniiden joulukukkien ja -kuusien avulla! Puutarhaliike
+              Neilikasta löydät edullisesti suosituimmat joulukukat, kuten
+              amaryllikset, joulutähdet ja hyasintit, jotka tuovat kotiisi
+              perinteistä joulun tuoksua ja väriä. Lisäksi tarjoamme laajan
+              valikoiman tuoreita ja laadukkaita joulukuusia, jotka sopivat niin
+              pieneen kuin suureenkin kotiin. Kuusemme ovat saatavilla eri
+              kokoisina ja hintaluokissa, joten löydät varmasti sopivan
+              vaihtoehdon. Tule käymään myymälässämme ja hanki kaikki
+              tarvittavat koristeet ja kasvit, joilla luot täydellisen
+              joulutunnelman. Joulun taika alkaa Puutarhaliike Neilikasta!
             </p>
           </div>
         </div>
@@ -128,8 +170,16 @@
           <div class="product-block product-text">
             <p>
               <b>1.9.2023</b><br />
-              Nyt on hyvä aika aloittaa puutarhan valmistelu talven lepokautta
-              varten. Meiltä löydät kaikki työkalut ja tarvikkeet.
+              Nyt on oikea aika aloittaa puutarhan valmistelut talven lepokautta
+              varten! Talven lähestyessä on tärkeää suojata kasvit ja varmistaa,
+              että puutarhasi on valmis kylmiin kuukausiin. Puutarhaliike
+              Neilikasta löydät kaiken tarvittavan puutarhan talvikuntoon
+              saattamiseen. Tarjoamme laajan valikoiman työkaluja, kuten
+              lehtiharavia, talikkoja ja pensasleikkureita, jotka helpottavat
+              syystöitä. Lisäksi löydät suojausmateriaalit, kuten pakkaspeitteet
+              ja talvisuojat, jotka auttavat kasvejasi selviytymään talven yli.
+              Tule tutustumaan valikoimaamme ja varmista, että puutarhasi on
+              hyvin suojattu ja valmis odottamaan kevään heräämistä!
             </p>
           </div>
         </div>
